# Beef

./: CMakeLists.txt
BeefBoot/: BeefBoot.cpp  BootApp.cpp  CMakeLists.txt
BeefRT/: CMakeLists.txt
BeefRT/rt/: Object.cpp  Thread.cpp
BeefySysLib/: CMakeLists.txt  Common.cpp
BeefySysLib/platform/sdl/: GLRenderDevice.h  SdlBFApp.cpp
BeefySysLib/util/: BeefPerf.cpp
IDE/src/: IDEApp.bf
IDEHelper/: CMakeLists.txt
SDL3_Sandbox/: CMakeLists.txt  TheApp.h  main.cpp
cmake/: FindLLVM18.cmake
